@@ -1,3 +1,8 @@
+20030721:
+---------
+	* Fix problem with Xrandr MCS plugin and splash screen not using
+	  the new screen height/width.
+
 20030716:
 ---------
 	* XfceTrayIcon now both provides "clicked" (a single left button
