@@ -1,3 +1,14 @@
+2003-07-19 13:16  bmeurer
+
+	* po/POTFILES.in, po/de.gmo, po/de.po, po/es.gmo, po/es.po,
+	po/es_MX.gmo, po/es_MX.po, po/nl.gmo, po/nl.po, po/tr.gmo,
+	po/tr.po, po/xfce4-session.pot, po/zh_CN.gmo, po/zh_CN.po,
+	xfce4-session/ice-layer.c: Fixed broken POTFILES.in
+
+2003-07-18 23:09  bmeurer
+
+	* ChangeLog, TODO: Add note about Autostart option
+
 2003-07-18 21:45  bmeurer
 
 	* xfce4-session/main.c: Fixes: "the xfce4-session trayicon is off
